--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.3.0",
+    "@types/uuid": "^10.0.0",
     "@types/validator": "types/validator",
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
@@ -17,6 +19,9 @@
     "dev": "NODE_ENV=development nodemon src/index.ts",
     "start": "NODE_ENV=production yarn build && node build/index.js",
     "migrate": "yarn build && sequelize db:migrate",
+    "migrate:undo": "sequelize db:migrate:undo",
+    "seed:all": "yarn build && sequelize db:seed:all",
+    "seed:undo": "sequelize db:seed:undo",
     "lint": "eslint . --fix",
     "format": "prettier . --write",
     "build": "tsc"
@@ -25,6 +30,8 @@
     "@sequelize/core": "^7.0.0-alpha.41",
     "@sequelize/mariadb": "^7.0.0-alpha.41",
     "@sequelize/mysql": "^7.0.0-alpha.41",
+    "@sequelize/validator.js": "^7.0.0-alpha.41",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "global": "^4.4.0",
     "inversify": "^6.0.2",
@@ -35,6 +42,7 @@
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
+    "uuid": "^10.0.0",
     "winston": "^3.14.2"
   }
 }
